# SpaceTravel

./: CMakeLists.txt  README.md  run.bat
models/: lab3.mtl
src/: camera.h  color.h  face.h  fragment.h  framebuffer.h  line.h  loadOBJ.h  main.cpp  models.h  point.h  shaders.h  triangle.h  vertex.h  vertex3.h
